Bug 424344 - Accounts combobox in export wizard
Summary: Accounts combobox in export wizard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: exporter (other bugs)
Version First Reported In: 5.0.8
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-17 17:47 UTC by antoine
Modified: 2020-07-19 10:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
accounts combobox (263.98 KB, image/png)
2020-07-17 17:47 UTC, antoine
Details

Note You need to log in before you can comment on or make changes to this bug.
Description antoine 2020-07-17 17:47:36 UTC
Created attachment 130204 [details]
accounts combobox

SUMMARY

Accounts combobox in export wizard list accounts more than once

STEPS TO REPRODUCE
1. File > export > qif
2. Click on the accounts combobox
3. 

OBSERVED RESULT
Accounts appear more than once



SOFTWARE/OS VERSIONS
xubuntu 20.04

ADDITIONAL INFORMATION
I experienced this bug 419275 before having this issue, they are maybe related
Comment 1 Jack 2020-07-18 22:01:48 UTC
I confirm that each set of accounts (Favorites (if any), Asset, and Liability) are listed twice.  The problem is still present after saving the default qif profile as mentioned in the other bug.  Note the repeat is (F F A A L L) and not (F A L F A L) in case that helps find the cause.
Comment 2 Thomas Baumgart 2020-07-19 10:41:44 UTC
Git commit b418331d789cd1a99ab09d8c49f85c8226219156 by Thomas Baumgart.
Committed on 19/07/2020 at 10:41.
Pushed by tbaumgart into branch '5.1'.

Remove unnecessary loading of the accounts model
FIXED-IN: 5.1.1

M  +0    -1    kmymoney/plugins/qif/export/kexportdlg.cpp

https://invent.kde.org/office/kmymoney/commit/b418331d789cd1a99ab09d8c49f85c8226219156