Remove unnecessary loading of the accounts model

BUG: 424344
FIXED-IN: 5.1.1